Unit 218: Hello REST Assured!