@@ -1,4 +1,5 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 
 plugins {
 	id("org.springframework.boot") version "2.4.1"
@@ -25,6 +26,10 @@ dependencies {
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	runtimeOnly("com.h2database:h2")
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
+
+	testImplementation("io.rest-assured:rest-assured"){
+		exclude("com.sun.xml.bind", "jaxb-osgi")
+	}
 }
 
 tasks.withType<KotlinCompile> {
@@ -36,4 +41,15 @@ tasks.withType<KotlinCompile> {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+
+//	jvmArgs("--enable-preview")
+	jvmArgs("--illegal-access=deny")
+
+	// Important!
+	// You need to run gradle test or build with added clean command.
+	// ./gradlew clean test
+//	testLogging {
+//		this.showStandardStreams = true
+//		this.exceptionFormat = TestExceptionFormat.FULL
+//	}
 }
